<resources>
    <string name="app_name">PlannerApp</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wrong_email_or_password">Enter valid email address and/or password.</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="to_do_list">To Do List</string>
    <string name="settings">Settings</string>
    <string name="summary">Summary</string>
    <string name="to_do">To Do</string>
</resources>